Main menu: fix mobile menu bug on IE
...when you switching from active mobile menu to desktop menu version

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -239,7 +239,7 @@ th {
 	}
 
 	.main-nav__list.main-nav__list--active {
-		position: initial;
+		position: inherit;
 		border: 0;
 	}
 }
